--- a/prog5_add_BI.ipynb
+++ b/prog5_add_BI.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "fdf815e6-4a2d-44f5-8512-0a0dc090af2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#現在のデータはtempに退避\n",
-    "with open('data_augment/SimpleDA_BI/x5/temp/test.txt', 'r', encoding='UTF-8') as f:\n",
+    "with open('data_augment/SimpleDA_BI/x5/temp/dev.txt', 'r', encoding='UTF-8') as f:\n",
     "    data = f.read()\n",
     "    data = data.split(\"\\n\\n\")\n",
     "\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "6a4fd236-698f-48be-91ee-e1725cf01669",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "46a6dbe1-b1ba-473c-8103-893fd9862b3a",
    "metadata": {},
    "outputs": [],
@@ -76,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "21d80dd0-bfe7-43fc-8c02-43362476ea72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_BI(new_document,5,\"test.txt\")"
+    "add_BI(new_document,5,\"dev.txt\")"
    ]
   },
   {
