--- a/prog4_join_orig_new.ipynb
+++ b/prog4_join_orig_new.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "cff2dc0e",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "    origin_document.extend(aug_document)\n",
     "    \n",
     "\n",
-    "    with open(\"data_augment/SimpleDA_BI/\"+\"x\"+str(x)+\"/\"+new_filename, 'w', newline=newline,encoding='UTF-8') as file:\n",
+    "    with open(\"data_augment/SimpleDA_BI/\"+\"x\"+str(x)+\"/temp/\"+new_filename, 'w', newline=newline,encoding='UTF-8') as file:\n",
     "        for sentence in origin_document:\n",
     "            for token_list in sentence:\n",
     "                if len(token_list)==2:\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "00ce4f4b-9964-4290-b138-bc66019d769e",
    "metadata": {},
    "outputs": [],
@@ -73,9 +73,9 @@
     "delimiter=\" \"\n",
     "space_row = [\"\",\"\"]\n",
     "    \n",
-    "def Remove_tree_pos(aug_document,x,new_filename):\n",
+    "def OutPutD(aug_document,x,new_filename):\n",
     "\n",
-    "    with open(\"data_augment/SimpleDA_BI/\"+\"x\"+str(x)+\"/\"+new_filename, 'w', newline=newline,encoding='UTF-8') as file:\n",
+    "    with open(\"data_augment/SimpleDA_BI/\"+\"x\"+str(x)+\"/temp/\"+new_filename, 'w', newline=newline,encoding='UTF-8') as file:\n",
     "        for sentence in aug_document:\n",
     "            for token_list in sentence:\n",
     "                if len(token_list)==2: \n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "a8944172",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "459ac28d-e643-435a-af4f-aab0bafe18a6",
    "metadata": {},
    "outputs": [],
@@ -122,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "e504ec9e-763b-484e-a474-7853cf2f0d04",
    "metadata": {},
    "outputs": [],
    "source": [
     "#ここで、オリジナルのタグの付与が必要であったので修正\n",
-    "with open('data_augment/SimpleDA_BI/x2/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
+    "with open('data_augment/SimpleDA_BI/x2/temp/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "    train_data = f.read()\n",
     "    train_data = train_data.split(\"\\n\\n\")\n",
     "\n",
@@ -150,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "228fae41-94d7-4045-b951-6c2fdf26fbef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data_augment/SimpleDA_BI/x5/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
+    "with open('data_augment/SimpleDA_BI/x5/temp/train_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "    train_data = f.read()\n",
     "    train_data = train_data.split(\"\\n\\n\")\n",
     "\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "b48d288d",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "76b9d1d6",
    "metadata": {},
    "outputs": [],
@@ -206,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "id": "cb501937-c758-4765-bd73-7aba7fe8e6ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "#ここで、オリジナルのタグの付与が必要であったので修正\n",
-    "with open('data_augment/SimpleDA_BI/x2/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
+    "with open('data_augment/SimpleDA_BI/x2/temp/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "    dev_data = f.read()\n",
     "    dev_data = dev_data.split(\"\\n\\n\")\n",
     "\n",
@@ -234,13 +234,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "id": "60eb874f-d79d-47f6-a0d6-4da88deded5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#ここで、オリジナルのタグの付与が必要であったので修正\n",
-    "with open('data_augment/SimpleDA_BI/x5/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
+    "with open('data_augment/SimpleDA_BI/x5/temp/dev_raw.txt', 'r', encoding='UTF-8') as f:\n",
     "    dev_data = f.read()\n",
     "    dev_data = dev_data.split(\"\\n\\n\")\n",
     "\n",
